--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: publish
 on:
   push:
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
+    # tags:
+#       - '[0-9]+.[0-9]+.[0-9]+'
 jobs:
   build:
     name: Release
