--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ build-backend = 'setuptools.build_meta'
 version_scheme = "guess-next-rc"
 local_scheme = "time-dot-node"
 normalize = false
-write_to = "BUILT_VERSION.txt"
+write_to = "RAW_VERSION.txt"
 
 [tool.setuptools.dynamic]
 version = {file = "VERSION.txt"}
