--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -6,14 +6,14 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: '3.9.13'
+        python-version: '3.9.7'
     - name: Install dependencies and build package
       run: |
         python -m pip install --upgrade pip
