--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -13,12 +13,13 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: '3.9.7'
+        python-version: '3.9.13'
     - name: Install dependencies and build package
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine setuptools_scm setuptools_scm_git_semver
-        python setup.py sdist bdist_wheel
+        pip install setuptools wheel twine setuptools_scm pipenv
+        pipenv install setuptools_scm_git_semver
+        pipenv run python setup.py sdist bdist_wheel
 
     - name: Read version file
       id: version_file
