--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
-        python-version: '3.9.13'
+        python-version: '3.9.7'
     - name: Read version file
       id: version_file
       uses: juliangruber/read-file-action@v1
@@ -26,8 +26,8 @@ jobs:
     - name: Install dependencies and build package
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine setuptools_scm pipenv
-        pipenv install setuptools_scm_git_semver
+        pip install setuptools wheel twine pipenv
+        pipenv install setuptools_scm setuptools_scm_git_semver
         pipenv run python setup.py sdist bdist_wheel
 
     - name: Tag commit
