--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Install dependencies and build package
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine pipenv
-        pipenv install setuptools_scm setuptools_scm_git_semver
+        pip install wheel twine pipenv
+        pipenv setuptools install setuptools_scm setuptools_scm_git_semver
         pipenv run python setup.py sdist bdist_wheel
 
     - name: Tag commit
