--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install wheel twine pipenv
-        pipenv setuptools install setuptools_scm setuptools_scm_git_semver
+        pipenv install setuptools setuptools_scm setuptools_scm_git_semver
         pipenv run python setup.py sdist bdist_wheel
 
     - name: Tag commit
