--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -32,6 +32,9 @@ jobs:
         pipenv install setuptools setuptools_scm setuptools_scm_git_semver
         pipenv run python setup.py sdist bdist_wheel
 
+    - name: run git init
+      run: git init
+
     - uses: actions-ecosystem/action-push-tag@v1
       with:
         tag: ${{ steps.version_file.outputs.content }}
