--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -12,6 +12,13 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch_depth: 0
+
+    - uses: actions-ecosystem/action-get-latest-tag@v1
+        id: get-latest-tag
+
+    - name: Echo tag
+      run: echo "${{ steps.get-latest-tag.outputs.tag }}"
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
