--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        fetch_depth: 0
+        fetch-depth: 0
 
     - uses: actions-ecosystem/action-get-latest-tag@v1
         id: get-latest-tag
