--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -45,4 +45,4 @@ jobs:
 
     - uses: actions-ecosystem/action-push-tag@v1
       with:
-        tag: ${{ steps.version_file.outputs.content }}
+        tag: "${{ steps.version_file.outputs.content }}"
