--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -58,4 +58,4 @@ jobs:
 
     - uses: actions-ecosystem/action-push-tag@v1
       with:
-        tag: "${{ steps.version_file.outputs.content }}"
+        tag: "${{ steps.clean.outputs.value }}"
