clean up workflow and set to only run on push to master

--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -2,20 +2,21 @@ name: "Build client and Push Tag based on version"
 
 on:
   push:
-    #branches: [master]
+    branches: [master]
 
 jobs:
   build:
     runs-on: ubuntu-18.04
 
     steps:
+      # needs a fetch depth of 0 to get all tags
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
     - uses: actions-ecosystem/action-get-latest-tag@v1
       id: get-latest-tag
-
+      # give me the latest tag in case I need to troubleshoot
     - name: Echo tag
       run: echo "${{ steps.get-latest-tag.outputs.tag }}"
 
@@ -36,31 +37,23 @@ jobs:
     - name: Install dependencies and build package
       run: |
         python -m pip install --upgrade pip
-        pip install wheel twine pipenv
-        pipenv install setuptools setuptools_scm setuptools_scm_git_semver
-        pipenv run python setup.py sdist bdist_wheel
-
-    - name: run git init
-      run: git init
+        pip install wheel twine pipenv setuptools setuptools_scm
+        python setup.py sdist bdist_wheel
 
     - name: Echo version
       run: echo "${{ steps.version_file.outputs.content }}"
 
-    - id: clean
+      # string is dirtied by an implicit quote char so clean it
+    - id: clean up dirty version string
       uses: mad9000/actions-find-and-replace-string@2
       with:
         source: ${{ steps.version_file.outputs.content }}
         find: "'"
         replace: ''
 
-    - name: Echo version
+    - name: Echo cleaned up value
       run: echo "${{ steps.clean.outputs.value }}"
 
-
-    - uses: rickstaa/action-create-tag@v1
+    - uses: rickstaa/action-create-tag@v1.2.3
       with:
         tag: "${{ steps.clean.outputs.value }}"
-
-    # - uses: actions-ecosystem/action-push-tag@v1
-    #   with:
-    #     tag: "${{ steps.clean.outputs.value }}"
