--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -37,11 +37,16 @@ jobs:
     - name: Install dependencies and build package
       run: |
         python -m pip install --upgrade pip
-        pip install wheel twine pipenv setuptools setuptools_scm
-        python setup.py sdist bdist_wheel
+        pip install wheel twine pipenv setuptools
+        pipenv install setuptools_scm setuptools_scm_git_semver
+        pipenv run python setup.py sdist bdist_wheel
 
     - name: Echo version
       run: echo "${{ steps.version_file.outputs.content }}"
+
+    - name: Echo the version from python
+      run: pipenv run python setup.py --version
+
 
       # string is dirtied by an implicit quote char so clean it
     - id: clean
