--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = [
 requires = [
     "setuptools",
     "setuptools_scm",
-   # "setuptools_scm_git_semver",
+    "setuptools_scm_git_semver",
 ]
 build-backend = 'setuptools.build_meta'
 
