--- a/.github/workflows/tag_and_build.yml
+++ b/.github/workflows/tag_and_build.yml
@@ -2,7 +2,7 @@ name: "Build client and Push Tag based on version"
 
 on:
   push:
-    #branches: [master]
+    branches: [master]
 
 jobs:
   build:
